k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pulsedev-ccm
  labels:
    app: pulsedev-ccm
